--- a/MID Tasks/lab 1+2/.vscode/settings.json
+++ b/MID Tasks/lab 1+2/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.embeddedhtml": "html",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "limits": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp"
     }
 }
